--- a/list_of_fortune_500_companies.html
+++ b/list_of_fortune_500_companies.html
@@ -13077,14 +13077,15 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>In this notebook, we will understand the steps of static web scrapping to extract a list from any website in simple steps. Python provides a powerful library BeautifulSoup for web scraping. After extracting the list from internet we will see how to create a list note in notion.</p>
+<p>In this notebook, we will understand the steps of static web scrapping to extract a table from any website in simple steps. At first, we will see how to use pandas to extract tables from a website.</p>
+<p>Python provides a powerful library BeautifulSoup for web scraping. As a second method, we will learn how to use BeautifulSoup to extract tables from a website. Apart from tables, we can extract list, texts, paragraphs, headers and all sort of things present on the website using BrautifulSoup.</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="prompt input_prompt">In&nbsp;[59]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
@@ -13098,18 +13099,392 @@ div#notebook {
 </div>
 
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Pandas">Pandas<a class="anchor-link" href="#Pandas">&#182;</a></h2>
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="prompt input_prompt">In&nbsp;[60]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span> 
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># using pandas</span>
+<span class="n">dfs</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_html</span><span class="p">(</span><span class="s1">&#39;https://www.zyxware.com/articles/4344/list-of-fortune-500-companies-and-their-websites&#39;</span><span class="p">)</span>
+<span class="k">for</span> <span class="n">df</span> <span class="ow">in</span> <span class="n">dfs</span><span class="p">:</span>
+    <span class="nb">print</span><span class="p">(</span><span class="n">df</span><span class="p">)</span>
 </pre></div>
 
     </div>
 </div>
 </div>
 
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+    <div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>    Rank                Company                           Website
+0      1                Walmart      http://www.stock.walmart.com
+1      2            Exxon Mobil         http://www.exxonmobil.com
+2      3                  Apple              http://www.apple.com
+3      4     Berkshire Hathaway  http://www.berkshirehathaway.com
+4      5             Amazon.com             http://www.amazon.com
+..   ...                    ...                               ...
+95    96                 AbbVie             http://www.abbvie.com
+96    97                    CHS             http://www.chsinc.com
+97    98  Capital One Financial         http://www.capitalone.com
+98    99            Progressive        http://www.progressive.com
+99   100              Coca-Cola   http://www.coca-colacompany.com
+
+[100 rows x 3 columns]
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[68]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">dfs</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="s1">&#39;fortune_100.csv&#39;</span><span class="p">,</span> <span class="n">index</span> <span class="o">=</span> <span class="kc">False</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="BeautifulSoup">BeautifulSoup<a class="anchor-link" href="#BeautifulSoup">&#182;</a></h2>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[62]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">url</span> <span class="o">=</span> <span class="s1">&#39;https://www.zyxware.com/articles/4344/list-of-fortune-500-companies-and-their-websites&#39;</span>
+<span class="n">page</span> <span class="o">=</span> <span class="n">requests</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">url</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[63]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="n">page</span><span class="o">.</span><span class="n">text</span><span class="p">[</span><span class="mi">0</span><span class="p">:</span><span class="mi">500</span><span class="p">])</span> <span class="c1"># Looking at first 500 characters of the response which we got from the url</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+    <div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>&lt;!DOCTYPE html&gt;
+&lt;html lang=&#34;en&#34; dir=&#34;ltr&#34; prefix=&#34;content: http://purl.org/rss/1.0/modules/content/  dc: http://purl.org/dc/terms/  foaf: http://xmlns.com/foaf/0.1/  og: http://ogp.me/ns#  rdfs: http://www.w3.org/2000/01/rdf-schema#  schema: http://schema.org/  sioc: http://rdfs.org/sioc/ns#  sioct: http://rdfs.org/sioc/types#  skos: http://www.w3.org/2004/02/skos/core#  xsd: http://www.w3.org/2001/XMLSchema# &#34;&gt;
+  &lt;head&gt;
+    &lt;meta charset=&#34;utf-8&#34; /&gt;
+&lt;script&gt;dataLayer = [];dataLayer.push({&#34;tag&#34;: 
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Understanding-the-output">Understanding the output<a class="anchor-link" href="#Understanding-the-output">&#182;</a></h4><p>The above response is in html format which is rendered by browsers to create the content on the website. Beautiful Soup gives us similar functionality of extracting useful informattion from the above content.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[64]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">soup</span> <span class="o">=</span> <span class="n">BeautifulSoup</span><span class="p">(</span><span class="n">page</span><span class="o">.</span><span class="n">content</span><span class="p">,</span> <span class="s1">&#39;html.parser&#39;</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>soup is a BeautifulSoup object from which we can extract any relevant data from the webpage. Following is the list of commoly used tags in html:</p>
+<table>
+<thead><tr>
+<th><code>Tags</code></th>
+<th><code>Description</code></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>!DOCTYPE</td>
+<td>Defines the document type</td>
+</tr>
+<tr>
+<td>html</td>
+<td>Defines an HTML document</td>
+</tr>
+<tr>
+<td>head</td>
+<td>Contains metadata/information for the document</td>
+</tr>
+<tr>
+<td>title</td>
+<td>Defines a title for the document</td>
+</tr>
+<tr>
+<td>body</td>
+<td>Defines the document's body</td>
+</tr>
+<tr>
+<td>h1 to &lt;h6</td>
+<td>Defines HTML headings</td>
+</tr>
+<tr>
+<td>p</td>
+<td>Defines a paragraph</td>
+</tr>
+<tr>
+<td>br</td>
+<td>Inserts a single line break</td>
+</tr>
+<tr>
+<td>hr</td>
+<td>Defines a thematic change in the content</td>
+</tr>
+<tr>
+<td>!--...--</td>
+<td>Defines a comment</td>
+</tr>
+<tr>
+<td>ul</td>
+<td>Defines an unordered list</td>
+</tr>
+<tr>
+<td>ol</td>
+<td>Defines an ordered list</td>
+</tr>
+<tr>
+<td>li</td>
+<td>Defines a list item</td>
+</tr>
+<tr>
+<td>dir</td>
+<td>Not supported in HTML5. Use ul instead. Defines a directory list</td>
+</tr>
+<tr>
+<td>dl</td>
+<td>Defines a description list</td>
+</tr>
+<tr>
+<td>dt</td>
+<td>Defines a term/name in a description list</td>
+</tr>
+<tr>
+<td>dd</td>
+<td>Defines a description of a term/name in a description list</td>
+</tr>
+<tr>
+<td>table</td>
+<td>Defines a table</td>
+</tr>
+<tr>
+<td>caption</td>
+<td>Defines a table caption</td>
+</tr>
+<tr>
+<td>th</td>
+<td>Defines a header cell in a table</td>
+</tr>
+<tr>
+<td>tr</td>
+<td>Defines a row in a table</td>
+</tr>
+<tr>
+<td>td</td>
+<td>Defines a cell in a table</td>
+</tr>
+<tr>
+<td>thead</td>
+<td>Groups the header content in a table</td>
+</tr>
+<tr>
+<td>tbody</td>
+<td>Groups the body content in a table</td>
+</tr>
+<tr>
+<td>tfoot</td>
+<td>Groups the footer content in a table</td>
+</tr>
+<tr>
+<td>col</td>
+<td>Specifies column properties for each column within a colgroup element</td>
+</tr>
+<tr>
+<td>colgroup</td>
+<td>Specifies a group of one or more columns in a table for formatting</td>
+</tr>
+</tbody>
+</table>
+<p>On our <a href="https://fortune.com/fortune500/2019/search/">target website</a> we are trying to extract a table. So we will use table tag to extract the list.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[75]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">table</span> <span class="o">=</span> <span class="n">soup</span><span class="o">.</span><span class="n">find</span><span class="p">(</span><span class="s1">&#39;table&#39;</span><span class="p">)</span>
+<span class="n">table_rows</span> <span class="o">=</span> <span class="n">table</span><span class="o">.</span><span class="n">find_all</span><span class="p">(</span><span class="s1">&#39;tr&#39;</span><span class="p">)</span>
+<span class="n">fortune</span> <span class="o">=</span> <span class="p">[]</span>
+<span class="k">for</span> <span class="n">tr</span> <span class="ow">in</span> <span class="n">table_rows</span><span class="p">:</span>
+    <span class="n">td</span> <span class="o">=</span> <span class="n">tr</span><span class="o">.</span><span class="n">find_all</span><span class="p">(</span><span class="s1">&#39;td&#39;</span><span class="p">)</span>
+    <span class="n">row</span> <span class="o">=</span> <span class="p">[</span><span class="n">i</span><span class="o">.</span><span class="n">text</span> <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="n">td</span><span class="p">]</span>
+    <span class="n">fortune</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">row</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[79]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">fortune</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="n">fortune</span><span class="p">)</span>
+<span class="n">fortune</span><span class="o">.</span><span class="n">drop</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="n">axis</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">inplace</span> <span class="o">=</span> <span class="kc">True</span><span class="p">)</span>
+<span class="n">fortune</span><span class="o">.</span><span class="n">head</span><span class="p">()</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+    <div class="prompt output_prompt">Out[79]:</div>
+
+
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>0</th>
+      <th>1</th>
+      <th>2</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1</th>
+      <td>1</td>
+      <td>Walmart</td>
+      <td>http://www.stock.walmart.com</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>2</td>
+      <td>Exxon Mobil</td>
+      <td>http://www.exxonmobil.com</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>3</td>
+      <td>Apple</td>
+      <td>http://www.apple.com</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>4</td>
+      <td>Berkshire Hathaway</td>
+      <td>http://www.berkshirehathaway.com</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>5</td>
+      <td>Amazon.com</td>
+      <td>http://www.amazon.com</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Conclusion">Conclusion<a class="anchor-link" href="#Conclusion">&#182;</a></h1><p>That's it for now. In this notebook we learnt two methods to extract tables from a website - by using pandas and beautifulsoup. Please upvote this <a href="https://www.kaggle.com/prasun2106/extracting-tables-from-any-website?scriptVersionId=33926509">notebook</a> if you find above code helpful, as it motivates me to write more tutorials for beginners. You can visit my website <a href="https://www.datamaniac.tech">datamaniac.tech</a> for more such tutorials. Follow me on <a href="https://www.kaggle.com/prasun2106">Kaggle</a>, <a href="https://github.com/prasun2106">Github</a> and contact me on <a href="https://www.linkedin.com/in/prasun-kumar-8250a5119/">LinkedIn</a></p>
+
+</div>
+</div>
 </div>
     </div>
   </div>
